Daily/Hourly tables now contain units.
Use those units in the hourly/daily download files.

--- a/app/views/derived_values/index.csv.erb
+++ b/app/views/derived_values/index.csv.erb
@@ -10,7 +10,7 @@ Date Units: <%= @values.first.timeformattext %>
 Latitude Units: decimal degrees
 Longitude Units: decimal degrees
 Elevation Units: meters above sea level
-DataValue Units: <%= @units %> 
+DataValue Units: <%= @values.first.unit.unitsname %> 
 CSV Format: SiteID,Date,Latitude,Longitude,Elevation,DataValue
 ################################################################
 <% @values.each do |row| %>
