--- a/app/views/derived_values/index.csv.erb
+++ b/app/views/derived_values/index.csv.erb
@@ -6,11 +6,11 @@ Time of Data Export: <%= @timenow.strftime("%Y-%m-%d %X") %>
 Site(s): <%= @values.pluck(:siteid).uniq.join(', ').html_safe %>
 Data Description: <%= @fprettyname %> 
 SiteID Units: unitless
-Date Units: <%= @values.first.timeformattext %> 
+Date Units: <%= @values.first.try(:timeformattext) %> 
 Latitude Units: decimal degrees
 Longitude Units: decimal degrees
 Elevation Units: meters above sea level
-DataValue Units: <%= @values.first.unit.unitsname %> 
+DataValue Units: <%= @values.first.try(:unit).try(:unitsname) %> 
 ################################################################
 SiteID,Date,Latitude,Longitude,Elevation,DataValue
 <% @values.each do |row| %>
