Minor text change.

--- a/app/views/sites/list.text.erb
+++ b/app/views/sites/list.text.erb
@@ -11,7 +11,7 @@ SiteID: <%= row.siteid %>
   Data Source Web Address: <%= row.source.sourcelink || "Unknown" %>
   Data Source Description: <%= row.source.sourcedescription || "Unknown" %>
   Site Citation: <%= row.source.citation || "Unknown" %>
-  Site Metadata
+  Metadata:
     Topic Category: <%= row.source.metadata.topiccategory || "Unknown" %>
     Title: <%= row.source.metadata.title || "Unknown" %>
     Abstract: <%= row.source.metadata.abstract || "Unknown" %>
