--- a/app/views/derived_values/index.csv.erb
+++ b/app/views/derived_values/index.csv.erb
@@ -1,6 +1,7 @@
 <% if flash[:error] %>
 ERROR: <%= flash[:error] %>
 <% end %>
+NOTE: Data are provisional and subject to revision; Imiq application still in beta-testing (as of May 2014)
 Database ID: ???
 Time of Data Export: <%= @timenow.strftime("%Y-%m-%d %X") %>
 Site(s): <%= @values.pluck(:siteid).uniq.join(', ').html_safe %>
