Additional content to export
* Add processing info.
* Reference to README.
* Added site name

--- a/app/views/derived_values/index.csv.erb
+++ b/app/views/derived_values/index.csv.erb
@@ -1,19 +1,21 @@
 <% if flash[:error] %>
 ERROR: <%= flash[:error] %>
 <% end %>
-NOTE: Data are provisional and subject to revision; Imiq application still in beta-testing (as of May 2014)
+NOTE: Data are provisional and subject to revision; Imiq application still in beta-testing.  See README.txt for citation information.
 Database ID: <%= render(partial: "dbversion.text") %>
 Time of Data Export: <%= @timenow.strftime("%Y-%m-%d %X") %>
 Site ID(s): <%= @values.pluck(:siteid).uniq.join(', ').html_safe %>
 Data Description: <%= @fprettyname %> 
+Level of Processing: <%= @fext %>, <%= @fprocdescrip %> 
 Site ID Units: unitless
+Site Name Units: unitless
 Date Units: <%= @values.first.try(:timeformattext) %> 
 Latitude Units: decimal degrees
 Longitude Units: decimal degrees
 Elevation Units: meters above sea level
 DataValue Units: <%= @values.first.try(:unit).try(:unitsname) %> 
 ################################################################
-SiteID,Date,Latitude,Longitude,Elevation,DataValue
+SiteID,SiteName,Date,Latitude,Longitude,Elevation,DataValue
 <% @values.each do |row| %>
-<%= row.siteid %>,<%= row.utcdatetime.strftime(row.timeformat) %>,<%= number_with_precision(row.site.lat, precision: 3) %>,<%= number_with_precision(row.site.lng, precision: 3) %>,<%= number_with_precision(row.site.z, precision: 3) %>,<%= number_with_precision(row.datavalue, precision: 3) %>
+<%= row.siteid %>,<%= row.site.sitename %>,<%= row.utcdatetime.strftime(row.timeformat) %>,<%= number_with_precision(row.site.lat, precision: 3) %>,<%= number_with_precision(row.site.lng, precision: 3) %>,<%= number_with_precision(row.site.z, precision: 3) %>,<%= number_with_precision(row.datavalue, precision: 3) %>
 <% end %>
