--- a/app/views/layouts/sites.html.haml
+++ b/app/views/layouts/sites.html.haml
@@ -1,6 +1,6 @@
 %html
   %head
-    = wicked_pdf_stylesheet_link_tag "application", media: 'all'
+    = wicked_pdf_stylesheet_link_tag "application"
   %body
     :css
       legend {
