creating an updated pdf export for site list

--- a/app/views/derived_values/index.csv.erb
+++ b/app/views/derived_values/index.csv.erb
@@ -2,7 +2,7 @@
 ERROR: <%= flash[:error] %>
 <% end %>
 NOTE: Data are provisional and subject to revision; Imiq application still in beta-testing.  See README.txt for citation information.
-Database ID: <%= render(partial: "dbversion.text") %>
+Database ID: <%= render("dbversion.text") %>
 Time of Data Export: <%= @timenow.strftime("%Y-%m-%d %X") %>
 Site ID(s): <%= @values.pluck(:siteid).uniq.join(', ').html_safe %>
 Data Description: <%= @fprettyname %> 
