--- a/app/views/derived_values/index.csv.erb
+++ b/app/views/derived_values/index.csv.erb
@@ -9,13 +9,15 @@ Data Description: <%= @fprettyname %>
 Level of Processing: <%= @fext %>, <%= @fprocdescrip %> 
 Site ID Units: unitless
 Site Name Units: unitless
+Variable ID: <%= @values.first.try(:variableid) %>
 Date Units: <%= @values.first.try(:timeformattext) %> 
 Latitude Units: decimal degrees
 Longitude Units: decimal degrees
 Elevation Units: meters above sea level
-DataValue Units: <%= @values.first.try(:unit).try(:unitsname) %> 
+VariableID Units: unitless
+DataValue Units: <%= @values.first.try(:unit).try(:unitsname) %>
 ################################################################
-SiteID,SiteName,Date,Latitude,Longitude,Elevation,DataValue
+SiteID,SiteName,Date,Latitude,Longitude,Elevation,VariableID,DataValue
 <% @values.each do |row| %>
-<%= row.siteid %>,<%= row.site.sitename %>,<%= row.utcdatetime.strftime(row.timeformat) %>,<%= number_with_precision(row.site.lat, precision: 3) %>,<%= number_with_precision(row.site.lng, precision: 3) %>,<%= number_with_precision(row.site.z, precision: 3) %>,<%= number_with_precision(row.datavalue, precision: 3) %>
+<%= row.siteid %>,<%= row.site.sitename %>,<%= row.utcdatetime.strftime(row.timeformat) %>,<%= number_with_precision(row.site.lat, precision: 3) %>,<%= number_with_precision(row.site.lng, precision: 3) %>,<%= number_with_precision(row.site.z, precision: 3) %>,<%= row.variableid %>,<%= number_with_precision(row.datavalue, precision: 3) %>
 <% end %>
