--- a/app/views/welcome/_main.html.haml
+++ b/app/views/welcome/_main.html.haml
@@ -1,4 +1,4 @@
-%h4 The Imiq Hydroclimate Database API
+%h4 The Imiq Hydroclimate Database
 %p
   The Imiq Hydroclimate database houses hydrologic, climatologic, and soils
   data collected in Alaska and Western Canada from the early 1900s to the present.
@@ -10,7 +10,7 @@
   
 %h4 Imiq API Endpoint Documentation
 %p
-  The sidebar on the left provides link to the API endpoints.  Click on an endpoint to see explicit insructions on to use the endpoint.
+  The sidebar on the left provides link to the API endpoints.  Click on an endpoint to see explicit insructions for its use.
 
 %h4 Data Quality Assurance/Quality Control
 %p
