cleaning up some formatting for docs

--- a/app/views/pages/networks.html.haml
+++ b/app/views/pages/networks.html.haml
@@ -1,3 +1,3 @@
-%h1.page-header= NetworksController::TITLE[:title]
+%h1.doc-heading= NetworksController::TITLE[:title]
 %p.lead= NetworksController::TITLE[:description]
 = render partial: 'welcome/collapse_api_params', locals:{api:NetworksController::API}
