--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,7 +1,6 @@
-.container-fluid
-  .row-fluid
-    .col-md-2
-      = render :partial => 'welcome/sidebar'
-    .col-md-10
-      = render :partial => 'welcome/main', locals: config
+.row
+  .col-md-2
+    = render :partial => 'welcome/sidebar'
+  .col-md-10
+    = render :partial => 'welcome/main', locals: config
             
