--- a/app/views/pages/organizations.html.haml
+++ b/app/views/pages/organizations.html.haml
@@ -1,3 +1,3 @@
-%h1.page-header= OrganizationsController::TITLE[:title]
+%h1.doc-heading= OrganizationsController::TITLE[:title]
 %p.lead= OrganizationsController::TITLE[:description]
 = render partial: 'welcome/collapse_api_params', locals:{api:OrganizationsController::API}
