--- a/app/views/pages/sources.html.haml
+++ b/app/views/pages/sources.html.haml
@@ -1,3 +1,3 @@
-%h1.page-header= SourcesController::TITLE[:title]
+%h1.doc-heading= SourcesController::TITLE[:title]
 %p.lead= SourcesController::TITLE[:description]
 = render partial: 'welcome/collapse_api_params', locals:{api:SourcesController::API}
