Added api endpoint for database statistics.

--- a/app/views/welcome/_sidebar.html.haml
+++ b/app/views/welcome/_sidebar.html.haml
@@ -11,3 +11,5 @@
     Sites
   %a.list-group-item{:href => page_path('sources'), class: current_page?(page_path('sources')) ? 'active' : ''}
     Sources
+  %a.list-group-item{:href => page_path('statistics'), class: current_page?(page_path('statistics')) ? 'active' : ''}
+    Statistics
