--- a/app/views/welcome/_main.html.haml
+++ b/app/views/welcome/_main.html.haml
@@ -38,7 +38,7 @@
   were contributed from many agencies and investigator-driven research 
   projects.
   
-%h4 Notice of Nondiscrimination
+%h4 UA Notice of Nondiscrimination
 %p 
   The University of Alaska is an affirmative action/equal opportunity employer 
   and educational institution.  The University of Alaska does not discriminate 
